lib/coal/coal_treetop.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module CoalTreetop
  include Treetop::Runtime

  def root
    @root ||= :root
  end

  module Root0
    def statements
      elements[1]
    end

  end

  module Root1
    def tree
      statements.tree
    end
  end

  def _nt_root
    start_index = index
    if node_cache[:root].has_key?(index)
      cached = node_cache[:root][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_ws
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r3 = _nt_statements
      s0 << r3
      if r3
        r5 = _nt_ws
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Root0)
      r0.extend(Root1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:root][start_index] = r0

    r0
  end

  module Statements0
    def comment
      elements[1]
    end
  end

  module Statements1
    def statement
      elements[0]
    end

    def statements
      elements[2]
    end
  end

  module Statements2
    def tree
      [statement.tree].compact.concat(statements.tree)
    end
  end

  module Statements3
    def ws
      elements[0]
    end

    def comment
      elements[1]
    end
  end

  module Statements4
    def statement
      elements[0]
    end

  end

  module Statements5
    def tree
      [statement.tree].compact
    end
  end

  def _nt_statements
    start_index = index
    if node_cache[:statements].has_key?(index)
      cached = node_cache[:statements][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_statement
    s1 << r2
    if r2
      i3 = index
      s4, i4 = [], index
      loop do
        i5, s5 = index, []
        r7 = _nt_ws
        if r7
          r6 = r7
        else
          r6 = instantiate_node(SyntaxNode,input, index...index)
        end
        s5 << r6
        if r6
          r8 = _nt_comment
          s5 << r8
        end
        if s5.last
          r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
          r5.extend(Statements0)
        else
          @index = i5
          r5 = nil
        end
        if r5
          s4 << r5
        else
          break
        end
      end
      if s4.empty?
        @index = i4
        r4 = nil
      else
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
      end
      if r4
        r3 = r4
      else
        r9 = _nt_statement_separator
        if r9
          r3 = r9
        else
          @index = i3
          r3 = nil
        end
      end
      s1 << r3
      if r3
        r10 = _nt_statements
        s1 << r10
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Statements1)
      r1.extend(Statements2)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i11, s11 = index, []
      r12 = _nt_statement
      s11 << r12
      if r12
        s13, i13 = [], index
        loop do
          i14, s14 = index, []
          r15 = _nt_ws
          s14 << r15
          if r15
            r16 = _nt_comment
            s14 << r16
          end
          if s14.last
            r14 = instantiate_node(SyntaxNode,input, i14...index, s14)
            r14.extend(Statements3)
          else
            @index = i14
            r14 = nil
          end
          if r14
            s13 << r14
          else
            break
          end
        end
        r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
        s11 << r13
      end
      if s11.last
        r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
        r11.extend(Statements4)
        r11.extend(Statements5)
      else
        @index = i11
        r11 = nil
      end
      if r11
        r0 = r11
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:statements][start_index] = r0

    r0
  end

  module StatementSeparator0
  end

  module StatementSeparator1
  end

  def _nt_statement_separator
    start_index = index
    if node_cache[:statement_separator].has_key?(index)
      cached = node_cache[:statement_separator][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    s2, i2 = [], index
    loop do
      if has_terminal?('\G[ \\t\\r]', true, index)
        r3 = true
        @index += 1
      else
        r3 = nil
      end
      if r3
        s2 << r3
      else
        break
      end
    end
    r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
    s1 << r2
    if r2
      if has_terminal?("\n", false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("\n")
        r4 = nil
      end
      s1 << r4
      if r4
        r6 = _nt_ws
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s1 << r5
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(StatementSeparator0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i7, s7 = index, []
      r9 = _nt_ws
      if r9
        r8 = r9
      else
        r8 = instantiate_node(SyntaxNode,input, index...index)
      end
      s7 << r8
      if r8
        if has_terminal?(";", false, index)
          r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(";")
          r10 = nil
        end
        s7 << r10
        if r10
          r12 = _nt_ws
          if r12
            r11 = r12
          else
            r11 = instantiate_node(SyntaxNode,input, index...index)
          end
          s7 << r11
        end
      end
      if s7.last
        r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
        r7.extend(StatementSeparator1)
      else
        @index = i7
        r7 = nil
      end
      if r7
        r0 = r7
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:statement_separator][start_index] = r0

    r0
  end

  module Statement0
    def tree
      nil
    end
  end

  def _nt_statement
    start_index = index
    if node_cache[:statement].has_key?(index)
      cached = node_cache[:statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_return
    if r1
      r0 = r1
    else
      r2 = _nt_break
      if r2
        r0 = r2
      else
        r3 = _nt_if_unless
        if r3
          r0 = r3
        else
          r4 = _nt_while_until
          if r4
            r0 = r4
          else
            r5 = _nt_declaration
            if r5
              r0 = r5
            else
              r6 = _nt_expression
              if r6
                r0 = r6
              else
                if has_terminal?('', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 0))
                  r7.extend(Statement0)
                  @index += 0
                else
                  terminal_parse_failure('')
                  r7 = nil
                end
                if r7
                  r0 = r7
                else
                  @index = i0
                  r0 = nil
                end
              end
            end
          end
        end
      end
    end

    node_cache[:statement][start_index] = r0

    r0
  end

  module IfUnless0
    def type
      elements[0]
    end

    def expression
      elements[4]
    end

    def then_block
      elements[8]
    end

    def else_block
      elements[12]
    end
  end

  module IfUnless1
    def tree
      [type.text_value.to_sym, expression.tree, then_block.tree, else_block.tree]
    end
  end

  module IfUnless2
    def type
      elements[0]
    end

    def expression
      elements[4]
    end

    def block
      elements[8]
    end
  end

  module IfUnless3
    def tree
      [type.text_value.to_sym, expression.tree, block.tree]
    end
  end

  def _nt_if_unless
    start_index = index
    if node_cache[:if_unless].has_key?(index)
      cached = node_cache[:if_unless][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    i2 = index
    if has_terminal?('if', false, index)
      r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('if')
      r3 = nil
    end
    if r3
      r2 = r3
    else
      if has_terminal?('unless', false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure('unless')
        r4 = nil
      end
      if r4
        r2 = r4
      else
        @index = i2
        r2 = nil
      end
    end
    s1 << r2
    if r2
      r6 = _nt_gap
      if r6
        r5 = r6
      else
        r5 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r5
      if r5
        if has_terminal?('(', false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('(')
          r7 = nil
        end
        s1 << r7
        if r7
          r9 = _nt_gap
          if r9
            r8 = r9
          else
            r8 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r8
          if r8
            r10 = _nt_expression
            s1 << r10
            if r10
              r12 = _nt_gap
              if r12
                r11 = r12
              else
                r11 = instantiate_node(SyntaxNode,input, index...index)
              end
              s1 << r11
              if r11
                if has_terminal?(')', false, index)
                  r13 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(')')
                  r13 = nil
                end
                s1 << r13
                if r13
                  r15 = _nt_ws
                  if r15
                    r14 = r15
                  else
                    r14 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s1 << r14
                  if r14
                    r16 = _nt_block
                    s1 << r16
                    if r16
                      r18 = _nt_ws
                      if r18
                        r17 = r18
                      else
                        r17 = instantiate_node(SyntaxNode,input, index...index)
                      end
                      s1 << r17
                      if r17
                        if has_terminal?('else', false, index)
                          r19 = instantiate_node(SyntaxNode,input, index...(index + 4))
                          @index += 4
                        else
                          terminal_parse_failure('else')
                          r19 = nil
                        end
                        s1 << r19
                        if r19
                          r21 = _nt_ws
                          if r21
                            r20 = r21
                          else
                            r20 = instantiate_node(SyntaxNode,input, index...index)
                          end
                          s1 << r20
                          if r20
                            r22 = _nt_block
                            s1 << r22
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(IfUnless0)
      r1.extend(IfUnless1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i23, s23 = index, []
      i24 = index
      if has_terminal?('if', false, index)
        r25 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure('if')
        r25 = nil
      end
      if r25
        r24 = r25
      else
        if has_terminal?('unless', false, index)
          r26 = instantiate_node(SyntaxNode,input, index...(index + 6))
          @index += 6
        else
          terminal_parse_failure('unless')
          r26 = nil
        end
        if r26
          r24 = r26
        else
          @index = i24
          r24 = nil
        end
      end
      s23 << r24
      if r24
        r28 = _nt_gap
        if r28
          r27 = r28
        else
          r27 = instantiate_node(SyntaxNode,input, index...index)
        end
        s23 << r27
        if r27
          if has_terminal?('(', false, index)
            r29 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('(')
            r29 = nil
          end
          s23 << r29
          if r29
            r31 = _nt_gap
            if r31
              r30 = r31
            else
              r30 = instantiate_node(SyntaxNode,input, index...index)
            end
            s23 << r30
            if r30
              r32 = _nt_expression
              s23 << r32
              if r32
                r34 = _nt_gap
                if r34
                  r33 = r34
                else
                  r33 = instantiate_node(SyntaxNode,input, index...index)
                end
                s23 << r33
                if r33
                  if has_terminal?(')', false, index)
                    r35 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure(')')
                    r35 = nil
                  end
                  s23 << r35
                  if r35
                    r37 = _nt_ws
                    if r37
                      r36 = r37
                    else
                      r36 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s23 << r36
                    if r36
                      r38 = _nt_block
                      s23 << r38
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s23.last
        r23 = instantiate_node(SyntaxNode,input, i23...index, s23)
        r23.extend(IfUnless2)
        r23.extend(IfUnless3)
      else
        @index = i23
        r23 = nil
      end
      if r23
        r0 = r23
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:if_unless][start_index] = r0

    r0
  end

  module WhileUntil0
    def type
      elements[0]
    end

    def expression
      elements[4]
    end

    def block
      elements[8]
    end
  end

  module WhileUntil1
    def tree
      [type.text_value.to_sym, expression.tree, block.tree]
    end
  end

  def _nt_while_until
    start_index = index
    if node_cache[:while_until].has_key?(index)
      cached = node_cache[:while_until][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('while', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure('while')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('until', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure('until')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      r5 = _nt_gap
      if r5
        r4 = r5
      else
        r4 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r4
      if r4
        if has_terminal?('(', false, index)
          r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('(')
          r6 = nil
        end
        s0 << r6
        if r6
          r8 = _nt_gap
          if r8
            r7 = r8
          else
            r7 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r7
          if r7
            r9 = _nt_expression
            s0 << r9
            if r9
              r11 = _nt_gap
              if r11
                r10 = r11
              else
                r10 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r10
              if r10
                if has_terminal?(')', false, index)
                  r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(')')
                  r12 = nil
                end
                s0 << r12
                if r12
                  r14 = _nt_ws
                  if r14
                    r13 = r14
                  else
                    r13 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r13
                  if r13
                    r15 = _nt_block
                    s0 << r15
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(WhileUntil0)
      r0.extend(WhileUntil1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:while_until][start_index] = r0

    r0
  end

  module Block0
    def statements
      elements[2]
    end

  end

  module Block1
    def tree
      statements.tree
    end
  end

  module Block2
    def tree
      [super].compact
    end
  end

  def _nt_block
    start_index = index
    if node_cache[:block].has_key?(index)
      cached = node_cache[:block][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?('{', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('{')
      r2 = nil
    end
    s1 << r2
    if r2
      r4 = _nt_ws
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
      if r3
        r5 = _nt_statements
        s1 << r5
        if r5
          r7 = _nt_ws
          if r7
            r6 = r7
          else
            r6 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r6
          if r6
            if has_terminal?('}', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('}')
              r8 = nil
            end
            s1 << r8
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Block0)
      r1.extend(Block1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r9 = _nt_statement
      r9.extend(Block2)
      if r9
        r0 = r9
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:block][start_index] = r0

    r0
  end

  def _nt_expression
    start_index = index
    if node_cache[:expression].has_key?(index)
      cached = node_cache[:expression][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_assignment

    node_cache[:expression][start_index] = r0

    r0
  end

  module Declaration0
    def type
      elements[0]
    end

    def gap
      elements[1]
    end

    def identifier
      elements[2]
    end

    def expression
      elements[6]
    end
  end

  module Declaration1
    def tree
      [:decl, type.tree, identifier.tree, expression.tree]
    end
  end

  module Declaration2
    def type
      elements[0]
    end

    def gap
      elements[1]
    end

    def identifier
      elements[2]
    end
  end

  module Declaration3
    def tree
      [:decl, type.tree, identifier.tree]
    end
  end

  def _nt_declaration
    start_index = index
    if node_cache[:declaration].has_key?(index)
      cached = node_cache[:declaration][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_type
    s1 << r2
    if r2
      r3 = _nt_gap
      s1 << r3
      if r3
        r4 = _nt_identifier
        s1 << r4
        if r4
          r6 = _nt_gap
          if r6
            r5 = r6
          else
            r5 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r5
          if r5
            if has_terminal?('=', false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('=')
              r7 = nil
            end
            s1 << r7
            if r7
              r9 = _nt_gap
              if r9
                r8 = r9
              else
                r8 = instantiate_node(SyntaxNode,input, index...index)
              end
              s1 << r8
              if r8
                r10 = _nt_expression
                s1 << r10
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Declaration0)
      r1.extend(Declaration1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i11, s11 = index, []
      r12 = _nt_type
      s11 << r12
      if r12
        r13 = _nt_gap
        s11 << r13
        if r13
          r14 = _nt_identifier
          s11 << r14
        end
      end
      if s11.last
        r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
        r11.extend(Declaration2)
        r11.extend(Declaration3)
      else
        @index = i11
        r11 = nil
      end
      if r11
        r0 = r11
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:declaration][start_index] = r0

    r0
  end

  def _nt_pre_assign_op
    start_index = index
    if node_cache[:pre_assign_op].has_key?(index)
      cached = node_cache[:pre_assign_op][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('**', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('**')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('+', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('+')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        if has_terminal?('-', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('-')
          r3 = nil
        end
        if r3
          r0 = r3
        else
          if has_terminal?('*', false, index)
            r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('*')
            r4 = nil
          end
          if r4
            r0 = r4
          else
            if has_terminal?('/', false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('/')
              r5 = nil
            end
            if r5
              r0 = r5
            else
              if has_terminal?('%', false, index)
                r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure('%')
                r6 = nil
              end
              if r6
                r0 = r6
              else
                if has_terminal?('&', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('&')
                  r7 = nil
                end
                if r7
                  r0 = r7
                else
                  if has_terminal?('^', false, index)
                    r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure('^')
                    r8 = nil
                  end
                  if r8
                    r0 = r8
                  else
                    if has_terminal?('|', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('|')
                      r9 = nil
                    end
                    if r9
                      r0 = r9
                    else
                      if has_terminal?('<<', false, index)
                        r10 = instantiate_node(SyntaxNode,input, index...(index + 2))
                        @index += 2
                      else
                        terminal_parse_failure('<<')
                        r10 = nil
                      end
                      if r10
                        r0 = r10
                      else
                        if has_terminal?('>>', false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 2))
                          @index += 2
                        else
                          terminal_parse_failure('>>')
                          r11 = nil
                        end
                        if r11
                          r0 = r11
                        else
                          @index = i0
                          r0 = nil
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:pre_assign_op][start_index] = r0

    r0
  end

  module Assignment0
    def identifier
      elements[0]
    end

    def assignment
      elements[4]
    end
  end

  module Assignment1
    def tree
      [:sto, identifier.tree, assignment.tree]
    end
  end

  module Assignment2
    def identifier
      elements[0]
    end

    def pre_assign_op
      elements[2]
    end

    def assignment
      elements[5]
    end
  end

  module Assignment3
    def tree
      var = identifier.tree
      [:sto, var, [BINARY_SYMS[pre_assign_op.text_value], var, assignment.tree]]
    end
  end

  def _nt_assignment
    start_index = index
    if node_cache[:assignment].has_key?(index)
      cached = node_cache[:assignment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
